intel/bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/log.txt
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:25:42: error: assigning to 'int32_t' (aka 'void *') from incompatible type 'int'
            sam_A = 2 * dpp->samplesA[0] - dpp->samplesA[1];
                    ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:26:42: error: assigning to 'int32_t' (aka 'void *') from incompatible type 'int'
            sam_B = 2 * dpp->samplesB[0] - dpp->samplesB[1];
                    ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:28:63: error: assigning to 'int32_t' (aka 'void *') from incompatible type 'int'
            sam_A = (3 * dpp->samplesA[0] - dpp->samplesA[1]) >> 1;
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:29:63: error: assigning to 'int32_t' (aka 'void *') from incompatible type 'int'
            sam_B = (3 * dpp->samplesB[0] - dpp->samplesB[1]) >> 1;
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:34:28: error: assigning to 'int' from incompatible type 'int32_t' (aka 'void *')
        dpp->samplesA[0] = sam_A;
                           ^~~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:35:28: error: assigning to 'int' from incompatible type 'int32_t' (aka 'void *')
        dpp->samplesB[0] = sam_B;
                           ^~~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:38:42: error: assigning to 'int32_t' (aka 'void *') from incompatible type 'int'
            sam_A = 2 * dpp->samplesA[0] - dpp->samplesA[1];
                    ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:39:42: error: assigning to 'int32_t' (aka 'void *') from incompatible type 'int'
            sam_B = 2 * dpp->samplesB[0] - dpp->samplesB[1];
                    ~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:41:63: error: assigning to 'int32_t' (aka 'void *') from incompatible type 'int'
            sam_A = (3 * dpp->samplesA[0] - dpp->samplesA[1]) >> 1;
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:42:63: error: assigning to 'int32_t' (aka 'void *') from incompatible type 'int'
            sam_B = (3 * dpp->samplesB[0] - dpp->samplesB[1]) >> 1;
                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:45:28: error: assigning to 'int' from incompatible type 'int32_t' (aka 'void *')
        dpp->samplesA[1] = sam_A;
                           ^~~~~
bench_214/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main/extr_.FFmpeglibavcodecwavpackenc.c_reverse_decorr_with_main.c:46:28: error: assigning to 'int' from incompatible type 'int32_t' (aka 'void *')
        dpp->samplesB[1] = sam_B;
                           ^~~~~
13 errors generated.
HLS FPGA Parse FAILED.
